# surgical-vqa

./: .gitignore  EVAL.md  README.md  README_SETUP.md  SURGVU25_EXPERIMENT_SUMMARY.md  pyproject.toml  requirements.txt  run_inference.sh  run_inference_oneshot.sh  run_surgvu25.sh
.openresearch/: speedrun.sh
.openresearch/artifacts/: README.md
.openresearch/artifacts/eval/: scores_surgvu25.json
SURGVU25_cat_2_sample_set_public/: Evaluation.md
SURGVU25_cat_2_sample_set_public/case122/: case122.json  case122_question.json
SURGVU25_cat_2_sample_set_public/case123/: case123.json  case123_question.json
SURGVU25_cat_2_sample_set_public/case124/: case124.json  case124_question.json
SURGVU25_cat_2_sample_set_public/case125/: case125.json  case125_question.json
SURGVU25_cat_2_sample_set_public/case126/: case126.json  case126_question.json
SURGVU25_cat_2_sample_set_public/case127/: case127.json  case127_question.json
SURGVU25_cat_2_sample_set_public/case128/: case128.json  case128_question.json
SURGVU25_cat_2_sample_set_public/case129/: case129.json  case129_question.json
SURGVU25_cat_2_sample_set_public/case130/: case130.json  case130_question.json
SURGVU25_cat_2_sample_set_public/case131/: case131.json  case131_question.json
SURGVU25_cat_2_sample_set_public/case132/: case132.json  case132_question.json
data/: test_data_surgvu25.json
inference/: oneshot_examples.json  vision_process_medical.py  vllm_infer.py  vllm_infer_oneshot.py
results/: results_surgvu25_bad.json  results_surgvu25_test.json  results_surgvu25_test2.json  results_surgvu25_v2.json  results_surgvu25_v3.json  results_surgvu25_v4.json  results_surgvu25_v5.json  results_surgvu25_v6.json  results_surgvu25_v7.json  results_surgvu25_v8.json
utils/: convert_surgvu25_to_frames.py  convert_to_submission.py  merge_results_manual.py  score_to_eval.py  split_data_balanced.py
